--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,8 @@
     #wrapper {
         width:100%;
         height:100%;
-        position:relative;
+        position:fixed;
+        overflow:auto;
     }
 
     header nav {
