--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,8 @@
 <html>
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript">
         function nospaces(t){
