--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
     <header>
         <nav>
             <a href="/cfgs">Configs</a>
+            <a href="/booking">Booking</a>
             <a href="/instances">Instances</a>
             <a href="/results">Results</a>
             <a href="{% url 'logout' %}">Logout</a>
