rewrote 'results' app to match current format of ACC removed 'results' app from main navigation, since results are bound to instances - hence, results (for a particular instance) can be accessed from the instance view added randomizeTrackWhenEmpty updated messages

--- a/instances/templates/instances/instance.html
+++ b/instances/templates/instances/instance.html
@@ -15,6 +15,9 @@
         <h6 style="font-weight:bold">Latest stderr | <a href="{{request.path}}stdout">Download full</a> </h6>
         <textarea id="stderr" style="height: 200px;" disabled></textarea>
     </div>
+    <div class="card"  style="padding: 10px 16px 20px 16px;">
+        <a href="results"><input value="Results" class="btn green"></a>
+    </div>
 </div>
 
 
