--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -21,7 +21,7 @@
         {% render_table entries %}
     </div>
     <div class="card" id="drivers">
-        <h5><a href="entries">List of driver options</a></h5>
+        <h5><a href="drivers">List of driver options</a></h5>
         {% render_table drivers %}
     </div>
 </div>
