Add feature to view and download configuration file of instances

--- a/instances/templates/instances/instance.html
+++ b/instances/templates/instances/instance.html
@@ -23,6 +23,15 @@
 
         <h6 style="font-weight:bold">Latest stderr | <a href="{{request.path}}stdout">Download full</a> </h6>
         <textarea id="stderr" style="height: 200px;" disabled></textarea>
+
+        <h6 style="font-weight:bold">configuration.json | <a href="{{request.path}}configuration">Download full</a> </h6>
+        <textarea id="configuration" style="height: 200px;" disabled></textarea>
+
+        <h6 style="font-weight:bold">event.json | <a href="{{request.path}}events">Download full</a> </h6>
+        <textarea id="event" style="height: 200px;" disabled></textarea>
+
+        <h6 style="font-weight:bold">settings.json | <a href="{{request.path}}settings">Download full</a> </h6>
+        <textarea id="settings" style="height: 200px;" disabled></textarea>
     </div>
     <div class="card"  style="padding: 10px 16px 20px 16px;">
         <a href="results"><input value="Results" class="btn green"></a>
@@ -31,6 +40,8 @@
 
 
 <script>
+console.log(JSON.stringify({ x: 5, y: 6 }, null, 4));
+
     (function stdout(){
         $.post('{{request.path}}stdout', { lines: 10 }).done(function(data) {
             $('textarea#stdout').val(data);
@@ -41,6 +52,27 @@
     (function stderr(){
         $.post('{{request.path}}stderr', { lines: 10 }).done(function(data) {
             $('textarea#stderr').val(data);
+            setTimeout(stderr,2000);
+        });
+    })();
+
+    (function configuration(){
+        $.post('{{request.path}}configuration', { }).done(function(data) {
+            $('textarea#configuration').val(JSON.stringify(data, null, 4));
+            setTimeout(stderr,2000);
+        });
+    })();
+
+        (function events(){
+        $.post('{{request.path}}event', { }).done(function(data) {
+            $('textarea#event').val(JSON.stringify(data, null, 4));
+            setTimeout(stderr,2000);
+        });
+    })();
+
+        (function settings(){
+        $.post('{{request.path}}settings', { }).done(function(data) {
+            $('textarea#settings').val(JSON.stringify(data, null, 4));
             setTimeout(stderr,2000);
         });
     })();
