--- a/booking/templates/booking/entries.html
+++ b/booking/templates/booking/entries.html
@@ -10,6 +10,11 @@
 {% endfor %}
 {% endblock %}
 
+<style>
+    .container {
+        padding: 20px 16px;
+    }
+</style>
 
 <div class="container">
     <div class="card">
