added assistRules to instance form as proposed in #26; settings/configuration/assistRules now displayed as 'accordion'

--- a/instances/templates/instances/instances.html
+++ b/instances/templates/instances/instances.html
@@ -23,10 +23,31 @@
 
     <div class="card">
         {% load material_form %}
-        <h6 style="font-weight:bold">Instance config</h6>
+        <h5 style="font-weight:bold">Instance config</h5>
         <form name="instance_form" action="start" method="POST"
               onsubmit="return (document.forms['instance_form']['cfg'].value.length>0)">{% csrf_token %}
             {% form form=form %}{% endform %}
+            <ul class="collapsible" data-collapsible="accordion">
+                <li class="active">
+                    <div class="collapsible-header" style="font-weight:bold">Settings</div>
+                    <div class="collapsible-body">
+                        {% form form=form.settings %}{% endform %}
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header" style="font-weight:bold">Configuration</div>
+                    <div class="collapsible-body">
+                        {% form form=form.configuration %}{% endform %}
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header" style="font-weight:bold">AssistRules</div>
+                    <div class="collapsible-body">
+                        {% form form=form.assistRules %}{% endform %}
+                    </div>
+                </li>
+            </ul>
+
             <button class="btn green" type="submit">Start</button>
         </form>
 
@@ -35,7 +56,7 @@
 
 <div class="container">
     <div class="card">
-        <h6 style="font-weight:bold">Server instances</h6><br>
+        <h5 style="font-weight:bold">Server instances</h5><br>
         <table>
             <tr><td>Instance Name</td><td>Server Name</td><td>Config</td><td>UDP</td><td>TCP</td><td>PID</td><td></td></tr>
             {% for name,executor in executors.items %}
