--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
             headers: { "X-CSRFToken": getCookie("csrftoken") }
         });
 
+        $(document).ready(function() {
+            $('.collapsible').collapsible();
+        });
 </script>
 
 
