added eventRules.json to instance form (#34)

--- a/instances/templates/instances/instances.html
+++ b/instances/templates/instances/instances.html
@@ -46,6 +46,13 @@
                         {% form form=form.assistRules %}{% endform %}
                     </div>
                 </li>
+                <li>
+                    <div class="collapsible-header" style="font-weight:bold">EventRules</div>
+                    <div class="collapsible-body">
+                        {% form form=form.eventRules %}{% endform %}
+                    </div>
+                </li>
+            </ul>
             </ul>
 
             <button class="btn green" type="submit">Start</button>
